Fix <li> tag inside the <ul> tag
- The <li> tag inside the homepage and recipe sites has been modified to display as 'inline-block'.
- Each <div> tag inside the recipe sites has applied with appropriate 'background-color' and 'margin'.

The <li> tag changes in the homepage helps for the wider screens.
The <li> tag changes in the recipe sites makes the list aligned properly to the left of the list symbol.
The <div> changes made the site to look more vertically than horizontally as the content was too wide earlier.

--- a/css/style.css
+++ b/css/style.css
@@ -19,9 +19,9 @@
   background-color: #ffcf96;
 }
 
-body h1 {
-  font-size: 3rem;
-}
+/* body h1 { */
+/*   font-size: 3rem; */
+/* } */
 
 .mochi-page h1 {
   background-color: #8ca181;
@@ -37,6 +37,8 @@ body h1 {
 
 .title-level-1 {
   background-color: #5e6382;
+  margin-bottom: 2em;
+  font-size: 3rem;
 }
 
 .title-level-1,
@@ -46,6 +48,25 @@ body h1 {
 
 .recipes-list li a {
   text-decoration: none;
+  margin: 0 auto;
+}
+
+h3 {
+  font-size: 1.5em;
+  background-color: #5e6382;
+}
+
+.recipes-list li {
+  display: inline-block;
+  list-style: none;
+  margin: 5em;
+  background-color: #697099;
+  /* padding: 1em; */
+}
+
+.recipes-list li a img {
+  display: block;
+  margin: 1em;
 }
 
 body p,
@@ -57,4 +78,36 @@ body p,
 ul li,
 ol li {
   line-height: 2;
+}
+
+.ingredients-list,
+.steps-list {
+  display: inline-block;
+}
+
+.ingredients-list li,
+.steps-list li {
+  text-align: left;
+}
+
+.ingredients-list li {
+  list-style: square;
+}
+
+.container-box {
+  margin: 0 auto;
+  width: 700px;
+  padding: 1em;
+}
+
+.container-box.veg-korma {
+  background-color: #f7c991;
+}
+
+.container-box.mochi {
+  background-color: #bdd3b1;
+}
+
+.container-box.tiramisu {
+  background-color: #efe6d5;
 }
